meja/tests/wrong_optional_arg.meja
let a = fun (~a) => {
  a;
};

let b = fun () => { a(?a = Some(15)); };
